# aula_08_python

./: README.md  etl.py  pipeline.py  pyproject.toml
